syntax.output
Terminals unused in grammar

    mc_start
    mc_aff


State 7 conflicts: 7 shift/reduce
State 20 conflicts: 7 shift/reduce
State 21 conflicts: 6 shift/reduce
State 29 conflicts: 7 shift/reduce
State 35 conflicts: 7 shift/reduce
State 36 conflicts: 6 shift/reduce
State 37 conflicts: 1 shift/reduce, 8 reduce/reduce
State 41 conflicts: 1 shift/reduce
State 43 conflicts: 6 shift/reduce, 8 reduce/reduce
State 55 conflicts: 1 shift/reduce, 8 reduce/reduce
State 56 conflicts: 1 shift/reduce, 8 reduce/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 8 reduce/reduce
State 119 conflicts: 2 shift/reduce
State 120 conflicts: 2 shift/reduce
State 121 conflicts: 6 shift/reduce
State 127 conflicts: 8 shift/reduce
State 137 conflicts: 6 shift/reduce
State 138 conflicts: 6 shift/reduce
State 140 conflicts: 7 shift/reduce
State 141 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: ε

    2 program: $@1 COMMENT mc_ident DATA_SECTION CODE_SECTION mc_endp

    3 DATA_SECTION: mc_data DECLARATIONS mc_endp

    4 DECLARATIONS: DEC
    5             | DECLARATIONS DEC
    6             | COMMENT DECLARATIONS
    7             | DECLARATIONS COMMENT
    8             | ε

    9 $@2: ε

   10 DEC: VAR_TYPE $@2 mc_deuxp LISTE_VAR mc_pvg
   11    | DEC_CONST
   12    | DEC_VECTOR

   13 VAR_TYPE: mc_integ
   14         | mc_float
   15         | mc_char
   16         | mc_string

   17 LISTE_VAR: mc_ident
   18          | mc_ident mc_separateur LISTE_VAR

   19 DEC_CONST: mc_const mc_deuxp mc_ident mc_affectation VALEURS mc_pvg

   20 $@3: ε

   21 DEC_VECTOR: mc_vector mc_deuxp mc_ident $@3 mc_crocheto mc_cst mc_vg mc_cst mc_deuxp VAR_TYPE mc_crochetf mc_pvg

   22 VALEURS: mc_charactere
   23        | mc_chaine
   24        | INT_CONST
   25        | mc_cst

   26 CODE_SECTION: mc_code INSTRUCTIONS mc_endp

   27 INSTRUCTIONS: INSTRUCTION
   28             | INSTRUCTIONS INSTRUCTION

   29 COMMENT: mc_comment

   30 INSTRUCTION: INSTRUCTION_AFFECTATION
   31            | INSTRUCTION_LIRE
   32            | INSTRUCTION_ECRIRE
   33            | INSTRUCTION_CONDITION
   34            | INSTRUCTION_BOUCLE
   35            | COMMENT INSTRUCTION
   36            | INSTRUCTION COMMENT
   37            | ε

   38 INSTRUCTION_AFFECTATION: mc_ident mc_affectation EXPRESSION mc_pvg

   39 EXPRESSION: TERME
   40           | EXPRESSION mc_plus TERME
   41           | EXPRESSION mc_moins TERME

   42 TERME: FACTEUR
   43      | TERME mc_mult FACTEUR
   44      | TERME mc_div FACTEUR

   45 FACTEUR: mc_ident
   46        | INT_CONST
   47        | mc_charactere
   48        | mc_chaine
   49        | mc_cst
   50        | mc_paro EXPRESSION mc_parf
   51        | mc_paro mc_moins FACTEUR mc_parf

   52 INSTRUCTION_LIRE: mc_read mc_paro mc_chaine mc_deuxp mc_adresse mc_ident mc_parf mc_pvg

   53 INSTRUCTION_ECRIRE: mc_display mc_paro mc_chaine mc_deuxp mc_ident mc_parf mc_pvg

   54 INSTRUCTION_CONDITION: STRUCTURE_CONDITIONELLE
   55                      | INSTRUCTION_CONDITION STRUCTURE_CONDITIONELLE

   56 STRUCTURE_CONDITIONELLE: mc_if mc_paro CONDITION mc_parf mc_deuxp INSTRUCTIONS mc_else mc_deuxp INSTRUCTIONS mc_endp
   57                        | mc_if mc_paro CONDITION mc_parf mc_deuxp INSTRUCTIONS mc_endp

   58 CONDITION: CONDITION mc_and CONDITION
   59          | CONDITION mc_or CONDITION
   60          | EXPRESSION OPERATEUR_COMPAR EXPRESSION
   61          | EXPRESSION

   62 OPERATEUR_COMPAR: mc_sup
   63                 | mc_inf
   64                 | mc_supeg
   65                 | mc_infeg
   66                 | mc_egal
   67                 | mc_diff

   68 INSTRUCTION_BOUCLE: INSTRUCTION_BOUCLE BLOC_BOUCLE
   69                   | BLOC_BOUCLE

   70 BLOC_BOUCLE: mc_for mc_paro mc_ident mc_deuxp mc_cst mc_deuxp mc_ident mc_parf INSTRUCTION mc_endp
   71            | INSTRUCTION


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    mc_code (258) 26
    mc_data (259) 3
    mc_start (260)
    mc_endp (261) 2 3 26 56 57 70
    mc_aff (262)
    mc_pvg (263) 10 19 21 38 52 53
    mc_or (264) 59
    mc_and (265) 58
    mc_sup (266) 62
    mc_inf (267) 63
    mc_supeg (268) 64
    mc_infeg (269) 65
    mc_egal (270) 66
    mc_diff (271) 67
    mc_plus (272) 40
    mc_moins (273) 41 51
    mc_mult (274) 43
    mc_div (275) 44
    mc_adresse (276) 52
    mc_affectation (277) 19 38
    mc_crocheto (278) 21
    mc_crochetf (279) 21
    mc_comment (280) 29
    mc_deuxp (281) 10 19 21 52 53 56 57 70
    mc_vg (282) 21
    mc_vector (283) 21
    mc_paro (284) 50 51 52 53 56 57 70
    mc_parf (285) 50 51 52 53 56 57 70
    mc_separateur (286) 18
    mc_read (287) 52
    mc_display (288) 53
    mc_if (289) 56 57
    mc_else (290) 56
    mc_for (291) 70
    INT_CONST <int_val> (292) 24 46
    mc_ident <str_val> (293) 2 17 18 19 21 38 45 52 53 70
    mc_cst <str_val> (294) 21 25 49 70
    mc_chaine <str_val> (295) 23 48 52 53
    mc_charactere <char_val> (296) 22 47
    mc_integ (297) 13
    mc_float (298) 14
    mc_char (299) 15
    mc_string (300) 16
    mc_const (301) 19


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    program (48)
        on left: 2
        on right: 0
    $@1 (49)
        on left: 1
        on right: 2
    DATA_SECTION (50)
        on left: 3
        on right: 2
    DECLARATIONS (51)
        on left: 4 5 6 7 8
        on right: 3 5 6 7
    DEC (52)
        on left: 10 11 12
        on right: 4 5
    $@2 (53)
        on left: 9
        on right: 10
    VAR_TYPE <type_val> (54)
        on left: 13 14 15 16
        on right: 10 21
    LISTE_VAR <str_val> (55)
        on left: 17 18
        on right: 10 18
    DEC_CONST (56)
        on left: 19
        on right: 11
    DEC_VECTOR (57)
        on left: 21
        on right: 12
    $@3 (58)
        on left: 20
        on right: 21
    VALEURS <int_val> (59)
        on left: 22 23 24 25
        on right: 19
    CODE_SECTION (60)
        on left: 26
        on right: 2
    INSTRUCTIONS (61)
        on left: 27 28
        on right: 26 28 56 57
    COMMENT (62)
        on left: 29
        on right: 2 6 7 35 36
    INSTRUCTION (63)
        on left: 30 31 32 33 34 35 36 37
        on right: 27 28 35 36 70 71
    INSTRUCTION_AFFECTATION (64)
        on left: 38
        on right: 30
    EXPRESSION <int_val> (65)
        on left: 39 40 41
        on right: 38 40 41 50 60 61
    TERME <int_val> (66)
        on left: 42 43 44
        on right: 39 40 41 43 44
    FACTEUR <int_val> (67)
        on left: 45 46 47 48 49 50 51
        on right: 42 43 44 51
    INSTRUCTION_LIRE (68)
        on left: 52
        on right: 31
    INSTRUCTION_ECRIRE (69)
        on left: 53
        on right: 32
    INSTRUCTION_CONDITION (70)
        on left: 54 55
        on right: 33 55
    STRUCTURE_CONDITIONELLE (71)
        on left: 56 57
        on right: 54 55
    CONDITION (72)
        on left: 58 59 60 61
        on right: 56 57 58 59
    OPERATEUR_COMPAR (73)
        on left: 62 63 64 65 66 67
        on right: 60
    INSTRUCTION_BOUCLE (74)
        on left: 68 69
        on right: 34 68
    BLOC_BOUCLE (75)
        on left: 70 71
        on right: 68 69


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    2 program: $@1 • COMMENT mc_ident DATA_SECTION CODE_SECTION mc_endp

    mc_comment  shift, and go to state 4

    COMMENT  go to state 5


State 3

    0 $accept: program $end •

    $default  accept


State 4

   29 COMMENT: mc_comment •

    $default  reduce using rule 29 (COMMENT)


State 5

    2 program: $@1 COMMENT • mc_ident DATA_SECTION CODE_SECTION mc_endp

    mc_ident  shift, and go to state 6


State 6

    2 program: $@1 COMMENT mc_ident • DATA_SECTION CODE_SECTION mc_endp

    mc_data  shift, and go to state 7

    DATA_SECTION  go to state 8


State 7

    3 DATA_SECTION: mc_data • DECLARATIONS mc_endp

    mc_comment  shift, and go to state 4
    mc_vector   shift, and go to state 9
    mc_integ    shift, and go to state 10
    mc_float    shift, and go to state 11
    mc_char     shift, and go to state 12
    mc_string   shift, and go to state 13
    mc_const    shift, and go to state 14

    mc_comment  [reduce using rule 8 (DECLARATIONS)]
    mc_vector   [reduce using rule 8 (DECLARATIONS)]
    mc_integ    [reduce using rule 8 (DECLARATIONS)]
    mc_float    [reduce using rule 8 (DECLARATIONS)]
    mc_char     [reduce using rule 8 (DECLARATIONS)]
    mc_string   [reduce using rule 8 (DECLARATIONS)]
    mc_const    [reduce using rule 8 (DECLARATIONS)]
    $default    reduce using rule 8 (DECLARATIONS)

    DECLARATIONS  go to state 15
    DEC           go to state 16
    VAR_TYPE      go to state 17
    DEC_CONST     go to state 18
    DEC_VECTOR    go to state 19
    COMMENT       go to state 20


State 8

    2 program: $@1 COMMENT mc_ident DATA_SECTION • CODE_SECTION mc_endp

    mc_code  shift, and go to state 21

    CODE_SECTION  go to state 22


State 9

   21 DEC_VECTOR: mc_vector • mc_deuxp mc_ident $@3 mc_crocheto mc_cst mc_vg mc_cst mc_deuxp VAR_TYPE mc_crochetf mc_pvg

    mc_deuxp  shift, and go to state 23


State 10

   13 VAR_TYPE: mc_integ •

    $default  reduce using rule 13 (VAR_TYPE)


State 11

   14 VAR_TYPE: mc_float •

    $default  reduce using rule 14 (VAR_TYPE)


State 12

   15 VAR_TYPE: mc_char •

    $default  reduce using rule 15 (VAR_TYPE)


State 13

   16 VAR_TYPE: mc_string •

    $default  reduce using rule 16 (VAR_TYPE)


State 14

   19 DEC_CONST: mc_const • mc_deuxp mc_ident mc_affectation VALEURS mc_pvg

    mc_deuxp  shift, and go to state 24


State 15

    3 DATA_SECTION: mc_data DECLARATIONS • mc_endp
    5 DECLARATIONS: DECLARATIONS • DEC
    7             | DECLARATIONS • COMMENT

    mc_endp     shift, and go to state 25
    mc_comment  shift, and go to state 4
    mc_vector   shift, and go to state 9
    mc_integ    shift, and go to state 10
    mc_float    shift, and go to state 11
    mc_char     shift, and go to state 12
    mc_string   shift, and go to state 13
    mc_const    shift, and go to state 14

    DEC         go to state 26
    VAR_TYPE    go to state 17
    DEC_CONST   go to state 18
    DEC_VECTOR  go to state 19
    COMMENT     go to state 27


State 16

    4 DECLARATIONS: DEC •

    $default  reduce using rule 4 (DECLARATIONS)


State 17

   10 DEC: VAR_TYPE • $@2 mc_deuxp LISTE_VAR mc_pvg

    $default  reduce using rule 9 ($@2)

    $@2  go to state 28


State 18

   11 DEC: DEC_CONST •

    $default  reduce using rule 11 (DEC)


State 19

   12 DEC: DEC_VECTOR •

    $default  reduce using rule 12 (DEC)


State 20

    6 DECLARATIONS: COMMENT • DECLARATIONS

    mc_comment  shift, and go to state 4
    mc_vector   shift, and go to state 9
    mc_integ    shift, and go to state 10
    mc_float    shift, and go to state 11
    mc_char     shift, and go to state 12
    mc_string   shift, and go to state 13
    mc_const    shift, and go to state 14

    mc_comment  [reduce using rule 8 (DECLARATIONS)]
    mc_vector   [reduce using rule 8 (DECLARATIONS)]
    mc_integ    [reduce using rule 8 (DECLARATIONS)]
    mc_float    [reduce using rule 8 (DECLARATIONS)]
    mc_char     [reduce using rule 8 (DECLARATIONS)]
    mc_string   [reduce using rule 8 (DECLARATIONS)]
    mc_const    [reduce using rule 8 (DECLARATIONS)]
    $default    reduce using rule 8 (DECLARATIONS)

    DECLARATIONS  go to state 29
    DEC           go to state 16
    VAR_TYPE      go to state 17
    DEC_CONST     go to state 18
    DEC_VECTOR    go to state 19
    COMMENT       go to state 20


State 21

   26 CODE_SECTION: mc_code • INSTRUCTIONS mc_endp

    mc_comment  shift, and go to state 4
    mc_read     shift, and go to state 30
    mc_display  shift, and go to state 31
    mc_if       shift, and go to state 32
    mc_for      shift, and go to state 33
    mc_ident    shift, and go to state 34

    mc_comment  [reduce using rule 37 (INSTRUCTION)]
    mc_read     [reduce using rule 37 (INSTRUCTION)]
    mc_display  [reduce using rule 37 (INSTRUCTION)]
    mc_if       [reduce using rule 37 (INSTRUCTION)]
    mc_for      [reduce using rule 37 (INSTRUCTION)]
    mc_ident    [reduce using rule 37 (INSTRUCTION)]
    $default    reduce using rule 37 (INSTRUCTION)

    INSTRUCTIONS             go to state 35
    COMMENT                  go to state 36
    INSTRUCTION              go to state 37
    INSTRUCTION_AFFECTATION  go to state 38
    INSTRUCTION_LIRE         go to state 39
    INSTRUCTION_ECRIRE       go to state 40
    INSTRUCTION_CONDITION    go to state 41
    STRUCTURE_CONDITIONELLE  go to state 42
    INSTRUCTION_BOUCLE       go to state 43
    BLOC_BOUCLE              go to state 44


State 22

    2 program: $@1 COMMENT mc_ident DATA_SECTION CODE_SECTION • mc_endp

    mc_endp  shift, and go to state 45


State 23

   21 DEC_VECTOR: mc_vector mc_deuxp • mc_ident $@3 mc_crocheto mc_cst mc_vg mc_cst mc_deuxp VAR_TYPE mc_crochetf mc_pvg

    mc_ident  shift, and go to state 46


State 24

   19 DEC_CONST: mc_const mc_deuxp • mc_ident mc_affectation VALEURS mc_pvg

    mc_ident  shift, and go to state 47


State 25

    3 DATA_SECTION: mc_data DECLARATIONS mc_endp •

    $default  reduce using rule 3 (DATA_SECTION)


State 26

    5 DECLARATIONS: DECLARATIONS DEC •

    $default  reduce using rule 5 (DECLARATIONS)


State 27

    7 DECLARATIONS: DECLARATIONS COMMENT •

    $default  reduce using rule 7 (DECLARATIONS)


State 28

   10 DEC: VAR_TYPE $@2 • mc_deuxp LISTE_VAR mc_pvg

    mc_deuxp  shift, and go to state 48


State 29

    5 DECLARATIONS: DECLARATIONS • DEC
    6             | COMMENT DECLARATIONS •
    7             | DECLARATIONS • COMMENT

    mc_comment  shift, and go to state 4
    mc_vector   shift, and go to state 9
    mc_integ    shift, and go to state 10
    mc_float    shift, and go to state 11
    mc_char     shift, and go to state 12
    mc_string   shift, and go to state 13
    mc_const    shift, and go to state 14

    mc_comment  [reduce using rule 6 (DECLARATIONS)]
    mc_vector   [reduce using rule 6 (DECLARATIONS)]
    mc_integ    [reduce using rule 6 (DECLARATIONS)]
    mc_float    [reduce using rule 6 (DECLARATIONS)]
    mc_char     [reduce using rule 6 (DECLARATIONS)]
    mc_string   [reduce using rule 6 (DECLARATIONS)]
    mc_const    [reduce using rule 6 (DECLARATIONS)]
    $default    reduce using rule 6 (DECLARATIONS)

    DEC         go to state 26
    VAR_TYPE    go to state 17
    DEC_CONST   go to state 18
    DEC_VECTOR  go to state 19
    COMMENT     go to state 27


State 30

   52 INSTRUCTION_LIRE: mc_read • mc_paro mc_chaine mc_deuxp mc_adresse mc_ident mc_parf mc_pvg

    mc_paro  shift, and go to state 49


State 31

   53 INSTRUCTION_ECRIRE: mc_display • mc_paro mc_chaine mc_deuxp mc_ident mc_parf mc_pvg

    mc_paro  shift, and go to state 50


State 32

   56 STRUCTURE_CONDITIONELLE: mc_if • mc_paro CONDITION mc_parf mc_deuxp INSTRUCTIONS mc_else mc_deuxp INSTRUCTIONS mc_endp
   57                        | mc_if • mc_paro CONDITION mc_parf mc_deuxp INSTRUCTIONS mc_endp

    mc_paro  shift, and go to state 51


State 33

   70 BLOC_BOUCLE: mc_for • mc_paro mc_ident mc_deuxp mc_cst mc_deuxp mc_ident mc_parf INSTRUCTION mc_endp

    mc_paro  shift, and go to state 52


State 34

   38 INSTRUCTION_AFFECTATION: mc_ident • mc_affectation EXPRESSION mc_pvg

    mc_affectation  shift, and go to state 53


State 35

   26 CODE_SECTION: mc_code INSTRUCTIONS • mc_endp
   28 INSTRUCTIONS: INSTRUCTIONS • INSTRUCTION

    mc_endp     shift, and go to state 54
    mc_comment  shift, and go to state 4
    mc_read     shift, and go to state 30
    mc_display  shift, and go to state 31
    mc_if       shift, and go to state 32
    mc_for      shift, and go to state 33
    mc_ident    shift, and go to state 34

    mc_endp     [reduce using rule 37 (INSTRUCTION)]
    mc_comment  [reduce using rule 37 (INSTRUCTION)]
    mc_read     [reduce using rule 37 (INSTRUCTION)]
    mc_display  [reduce using rule 37 (INSTRUCTION)]
    mc_if       [reduce using rule 37 (INSTRUCTION)]
    mc_for      [reduce using rule 37 (INSTRUCTION)]
    mc_ident    [reduce using rule 37 (INSTRUCTION)]

    COMMENT                  go to state 36
    INSTRUCTION              go to state 55
    INSTRUCTION_AFFECTATION  go to state 38
    INSTRUCTION_LIRE         go to state 39
    INSTRUCTION_ECRIRE       go to state 40
    INSTRUCTION_CONDITION    go to state 41
    STRUCTURE_CONDITIONELLE  go to state 42
    INSTRUCTION_BOUCLE       go to state 43
    BLOC_BOUCLE              go to state 44


State 36

   35 INSTRUCTION: COMMENT • INSTRUCTION

    mc_comment  shift, and go to state 4
    mc_read     shift, and go to state 30
    mc_display  shift, and go to state 31
    mc_if       shift, and go to state 32
    mc_for      shift, and go to state 33
    mc_ident    shift, and go to state 34
